--- a/modales/control/Casignaturas.html
+++ b/modales/control/Casignaturas.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html ng-app="express">
+<head>
+	<title></title>
+
+	<script type="text/javascript" src="../angularjs/angular/angular.min.js"  ></script>
+</head>
+<body>
+
 <!--//////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
 <!--Aqui va la informacion q se va a mostrar en la ventana modal-->
 <h4 class="modal-title">Administracion de las asignaturas</h4>
@@ -13,6 +22,26 @@
 	</tr>
 	<tr>
 		<td>0001</td><td>Arquitectura</td> <td>PT02</td><td>(E)(M)(B)</td>
+
+
+	<div ng-controller="micontrolador">
+		
+{{mensaje}}, {{mensaje2}}
+
+
+
+<div ng-repeat="prueba in Lista.integrantes">
+	
+	
+
+	<ul>
+		<li>
+		<a href="">{{prueba.Docente}}</a>
+	</li>
+
+</ul>
+</div>
+	</div>
 	</tr>
 		</thead>
 		<tbody>
@@ -22,3 +51,35 @@
 		</tbody>
 	</table>
 </div>
+
+
+
+	<script>
+
+		/**
+		*  Module
+		*
+		* Description
+		*/
+		var expresiones=angular.module('express', []);
+		expresiones.controller('micontrolador', function($scope, $http){
+
+
+				$http.get('datos.json')
+					.success(function(datos){
+						$scope.Lista = datos;				
+				});
+			$scope.mensaje="hola mundo";
+			$scope.mensaje2="paso 2";
+			
+		});
+
+
+	</script>
+</body>
+</html>
+
+
+
+
+
